add div container, jumbotron,and header 1 and 2

--- a/vacation.html
+++ b/vacation.html
@@ -3,8 +3,39 @@
   <head>
     <meta charset="utf-8">
     <title>Vacation</title>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>This is a vacation</h1>
+      </div>
+      <h2>Hello, This is part one</h2>
+      <p>jjajkdhajdhakjdhajkhfjkhfskjhfsjkfhskjdfhjkshf
+        kjsdfhskjdfhksjdfhsjdhfjksdfhksjfskdfksdhjfh
+        sdhfjksdhfkjsdfhksjdhskjdfhsjkf</p>
+      <h2>Hello, This is part two</h2>
+      <p>hjkasdhakjsdhakjsdhkjashdkjashdkjahdkjsa
+        akjdhajksdhkjashdjkashdjhdjahdkjahdjad
+        jdhjskadhajshdjkashdakjshdjakshdajsdh
+        kdhjkasdhkajshdkjasdhakjsdhakjdhakj
+        ajdhsajkdhajksdhjakhdjakhdjkadh</p>
+      <h2>Hello, This is part three</h2>
+      <p>sajdhsjadhjkashdkjashjkashkjashdjkahd
+        ajsdhaskjdhkajshdkjashdkjhasdkjashd
+        jsdhaksjdhakjhdajhdjkashdkajhdjadh
+        ajdhkajsdhkjashdkjashdkjasdhkjashd</p>
+      <h2>Hello, this is part four</h2>
+      <p>sbdmasdjashdkjashdkjashdjkhkjahdkaj
+        akjsdaskjdhakjdhkasjhdkjasdhakjs
+        askdjhasjkdhkajshdkajhdkjahdkjsahd
+        akshdakshdkjashdkajshdkajsdhjkashd</p>
+      <h2>Hello, This is part five</h2>
+      <p>jsdhajksdhkjashdkjashdkjahsdkjhsjk
+        asjdhaskjdhaskjdhkajhdkjadh
+        kajdhsakjdhakjsdhkajdhajkgwu
+        fgsakjdhaksdhahdkjwhdkajhdlasjdl</P>
+      </div>
 
   </body>
 </html>
