add alot of div column and row and blockquotes

--- a/vacation.html
+++ b/vacation.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 
   <head>
     <meta charset="utf-8">
@@ -8,34 +9,63 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>This is a vacation</h1>
+        <center><h1>Hello, This is a vacation list: </h1></center>
       </div>
+    <div class="row">
+      <div class="col-md-4">
       <h2>Hello, This is part one</h2>
       <p>jjajkdhajdhakjdhajkhfjkhfskjhfsjkfhskjdfhjkshf
-        kjsdfhskjdfhksjdfhsjdhfjksdfhksjfskdfksdhjfh
+        dfdgdfgdfgdfhdhgfhfghdgdfg
+        sdhfjksdhfkjsdfhksjdhskjdfhsjkf
         sdhfjksdhfkjsdfhksjdhskjdfhsjkf</p>
+      </div>
+      <div class="col-md-4">
       <h2>Hello, This is part two</h2>
       <p>hjkasdhakjsdhakjsdhkjashdkjashdkjahdkjsa
-        akjdhajksdhkjashdjkashdjhdjahdkjahdjad
-        jdhjskadhajshdjkashdakjshdjakshdajsdh
-        kdhjkasdhkajshdkjasdhakjsdhakjdhakj
+        sfdsfdgdfgfgfdgdgdfgfdgdf
+        dfgsdfhfhfghgfhfghtrhtrhththfth
         ajdhsajkdhajksdhjakhdjakhdjkadh</p>
+      </div>
+      <div class="col-md-4">
       <h2>Hello, This is part three</h2>
       <p>sajdhsjadhjkashdkjashjkashkjashdjkahd
         ajsdhaskjdhkajshdkjashdkjhasdkjashd
         jsdhaksjdhakjhdajhdjkashdkajhdjadh
         ajdhkajsdhkjashdkjashdkjasdhkjashd</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
       <h2>Hello, this is part four</h2>
       <p>sbdmasdjashdkjashdkjashdjkhkjahdkaj
         akjsdaskjdhakjdhkasjhdkjasdhakjs
         askdjhasjkdhkajshdkajhdkjahdkjsahd
         akshdakshdkjashdkajshdkajsdhjkashd</p>
+      </div>
+      <div class="col-md-4">
       <h2>Hello, This is part five</h2>
       <p>jsdhajksdhkjashdkjashdkjahsdkjhsjk
         asjdhaskjdhaskjdhkajhdkjadh
         kajdhsakjdhakjsdhkajdhajkgwu
         fgsakjdhaksdhahdkjwhdkajhdlasjdl</P>
       </div>
+      <div class="col-md-4">
+      <h2>Hello, This is part six</h2>
+      <p>jsdhajksdhkjashdkjashdkjahsdkjhsjk
+        asjdhaskjdhaskjdhkajhdkjadh
+        kajdhsakjdhakjsdhkajdhajkgwu
+        fgsakjdhaksdhahdkjwhdkajhdlasjdl</P>
+      </div>
+    </div>
+  <div class="row">
+    <div class="col-md-4">
+  <h2>Partnering</h2>
+    <blockquote class="bg-info">
+      <p>"It's been really good working with you!"</p>
+      <footer>My partner the first day</footer>
+    </blockquote>
+    </div>
+  </div>
 
   </body>
 </html>
