add some bg colors to columns

--- a/vacation.html
+++ b/vacation.html
@@ -12,22 +12,23 @@
         <center><h1>Hello, This is a vacation list: </h1></center>
       </div>
     <div class="row">
-      <div class="col-md-4">
-      <h2>Hello, This is part one</h2>
+      <div class="col-md-4 bg-primary text=white">
+      <h2>Hello, This is part <strong>one</strong></h2>
       <p>jjajkdhajdhakjdhajkhfjkhfskjhfsjkfhskjdfhjkshf
         dfdgdfgdfgdfhdhgfhfghdgdfg
         sdhfjksdhfkjsdfhksjdhskjdfhsjkf
         sdhfjksdhfkjsdfhksjdhskjdfhsjkf</p>
       </div>
-      <div class="col-md-4">
-      <h2>Hello, This is part two</h2>
+      <div class="col-md-4 bg-success text=white">
+      <h2>Hello, This is part <strong>two</strong></h2>
       <p>hjkasdhakjsdhakjsdhkjashdkjashdkjahdkjsa
         sfdsfdgdfgfgfdgdgdfgfdgdf
-        dfgsdfhfhfghgfhfghtrhtrhththfth
-        ajdhsajkdhajksdhjakhdjakhdjkadh</p>
+        dfgsdfhfhfghgfhfghtrhtrhththfthbhghgjh
+        ajdhsajkdhajksdhjakhdjakhdjkadsdfdh
+        dsfsdfsdgdgdfgdfgfdgfewfewfwfewf</p>
       </div>
-      <div class="col-md-4">
-      <h2>Hello, This is part three</h2>
+      <div class="col-md-4 bg-danger text=white">
+      <h2>Hello, This is part <strong>three</strong></h2>
       <p>sajdhsjadhjkashdkjashjkashkjashdjkahd
         ajsdhaskjdhkajshdkjashdkjhasdkjashd
         jsdhaksjdhakjhdajhdjkashdkajhdjadh
@@ -35,22 +36,24 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
-      <h2>Hello, this is part four</h2>
+      <div class="col-md-4 bg-warning text=white">
+      <h2><mark>Hello, this is part <strong>four</strong></mark></h2>
       <p>sbdmasdjashdkjashdkjashdjkhkjahdkaj
         akjsdaskjdhakjdhkasjhdkjasdhakjs
         askdjhasjkdhkajshdkajhdkjahdkjsahd
-        akshdakshdkjashdkajshdkajsdhjkashd</p>
+        akshdakshdkjashdkajshdkajsdhjkashd
+        <ins>This line of text is meant to be treated as
+           an addition to the document.</ins></p>
       </div>
-      <div class="col-md-4">
-      <h2>Hello, This is part five</h2>
+      <div class="col-md-4 bg-info text=white">
+      <h2>Hello, This is part <strong>five</strong></h2>
       <p>jsdhajksdhkjashdkjashdkjahsdkjhsjk
         asjdhaskjdhaskjdhkajhdkjadh
         kajdhsakjdhakjsdhkajdhajkgwu
         fgsakjdhaksdhahdkjwhdkajhdlasjdl</P>
       </div>
-      <div class="col-md-4">
-      <h2>Hello, This is part six</h2>
+      <div class="col-md-4 bg-warning text=white">
+      <h2><mark>Hello, This is part <strong>six</strong></mark></h2>
       <p>jsdhajksdhkjashdkjashdkjahsdkjhsjk
         asjdhaskjdhaskjdhkajhdkjadh
         kajdhsakjdhakjsdhkajdhajkgwu
